http://drupal6-wysiwyg.module-demos.org/
Link aus module ACP zum Inhalt ist ohne SEO


2.0 Final from XXth XXX. 2012

Changelog:

ADDED:
- Function for SEO-URL added

DELETE:
- Regular date from the templates deleted
	(You can add if you like - see manual)



1.0 Final from 16th Feb. 2012

Changelog:

- Is more than one comment available, the login and register info will be display on bottom too
- Comment anker for request URL added
- Image resize for archived contents solved
- Module help integrated
- Problem with the theme changer fixed
- Function "read more" is visible only, if extended text available
- Resize function in the archived content fixed
- the breadcrumb link to the archive works now 
- Comment function for archived contents added
- Breadcrumb fixed
- Link to the content within the archived Page fixed
- Table overview for archived Page fixed
- Added counter as column within the table overview
- German translation added
- Comment bubbles are visible only, if comment function on
- Comment template modified. If the visitor a guest, the can find a link for login or register to post a comment.
- Link to the module blocks added
- New list block added
- New ticker block added
- New slider block added
- Imagesize for single page fixed
- Some options from the module preferences are disabled by default
- .::Module Admin page::. link on top also available 
- Breadcrumb shows the content title too, not only the tags
- Function for comments added
- Link (title) goes direct to the content within the front end page
- Preview for the module administration added
- Content are sorted in the module administration by "last_updated" DESC now
- The global search engine is searching within the field "extended_text" now too
- QuickSearch is looking within "title", "description" and "extended_text" (Backend and front end)
- Weight disabeled, the content are sorted by "date DESC" only
- Sort content by date ASC
- Summary page: designed "Read more" button added