@@ -23,17 +23,24 @@ $headermenu[] = array(
 	"link" => ICMS_URL . "/modules/" . $module->getVar("dirname") . "/");
 $headermenu[] = array(
 	"title" => _PREFERENCES,
-	"link" => "../../system/admin.php?fct=preferences&amp;op=showmod&amp;mod=" . $module->getVar("mid"));
+	"link" => "../../system/admin.php?fct=preferences&amp;op=showmod&amp;mod=" 
+		. $module->getVar("mid"));
 $headermenu[] = array(
 	"title" => _MI_CMS_BLOCKS,
-	"link" => ICMS_URL . "/modules/system/admin.php?fct=blocksadmin&filtersel=mid&filtersel2=".$module->getVar("mid"));
+	"link" => ICMS_URL . "/modules/system/admin.php?fct=blocksadmin&filtersel=mid&filtersel2="
+		. $module->getVar("mid"));
 $headermenu[] = array(
 	"title" => _MI_CMS_TEMPLATES,
 	"link" => '../../system/admin.php?fct=tplsets&op=listtpl&tplset=' 
-		. $icmsConfig['template_set'] . '&moddir=' . $module->getVar("dirname"));	
+		. $icmsConfig['template_set'] . '&moddir=' . $module->getVar("dirname"));
+$headermenu[] = array(
+	"title" => _MI_CMS_COMMENTS,
+	"link" => ICMS_URL . "/modules/system/admin.php?module=" . icms::$module -> getVar("mid") 
+		. "&status=0&limit=100&fct=comments&selsubmit=Go");
 $headermenu[] = array(
 	"title" => _CO_ICMS_UPDATE_MODULE,
-	"link" => ICMS_URL . "/modules/system/admin.php?fct=modulesadmin&amp;op=update&amp;module=" . $module->getVar("dirname"));
+	"link" => ICMS_URL . "/modules/system/admin.php?fct=modulesadmin&amp;op=update&amp;module=" 
+		. $module->getVar("dirname"));
 $headermenu[] = array(
 	"title" => _MODABOUT_ABOUT,
 	"link" => ICMS_URL . "/modules/" . $module->getVar("dirname") . "/admin/about.php");
